<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".ui.home.HomeFragment">
   <ProgressBar
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/progressbar"
       android:layout_centerInParent="true" />
   <ScrollView
       android:id="@+id/scroll_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent">


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/search_box"
             android:layout_margin="8dp"
             android:drawableStart="@drawable/ic_baseline_search_24"
             android:background="@drawable/search_gb"
             android:padding="13dp"
             android:textColor="@color/black"
             android:hint="@string/search_your_item_here1"
             android:textColorHint="@color/black"
             android:drawablePadding="5dp"
             android:elevation="5dp" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alice"
                android:id="@+id/popular_products1"
                android:textColor="@color/teal_700"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/popular_products12">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_all_popular"
                android:fontFamily="@font/alice"
                android:layout_weight="1"

                android:text="@string/view_all121"
                android:gravity="end"
                android:layout_marginRight="7dp"
                android:textSize="16sp"
                android:textColor="@color/teal_700">
            </TextView>
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:id="@+id/pop_rec"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alice"
                android:textColor="@color/teal_700"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/explore_products">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_all_explore"
                android:fontFamily="@font/alice"
                android:layout_weight="1"
                android:text="@string/view_all121"
                android:gravity="end"
                android:layout_marginRight="7dp"
                android:textSize="16sp"
                android:textColor="@color/teal_700">
            </TextView>
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:id="@+id/explore_rec"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:layout_weight="1"
                android:fontFamily="@font/alice"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/recommended">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_all_recommended"
                android:fontFamily="@font/alice"
                android:layout_weight="1"
                android:text="@string/view_all121"
                android:gravity="end"
                android:layout_marginRight="7dp"
                android:textSize="16sp"
                android:textColor="@color/teal_700">
            </TextView>
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:id="@+id/recommended_rec"/>

          </LinearLayout>
   </ScrollView>
</RelativeLayout>